[package]
name = "ogg-opus"
version = "0.1.0"
authors = ["sheosi <sertorbe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ogg = "^0.8"
magnum-opus = "^0.3" 
byteorder = "^1.3"
thiserror = "^1.0"
rand = "^0.8"

[dev-dependencies]
wav = "^1.0"