[package]
name = "ogg-opus"
version = "0.1.2"
authors = ["sheosi <sertorbe@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A decoder/encoder for Ogg Opus"
repository = "https://github.com/sheosi/ogg-opus"

exclude = ["test_assets/*"] # Don't upload files for testing


[dependencies]
ogg = "^0.8"
audiopus = "^0.2" 
byteorder = "^1.3"
thiserror = "^1.0"
rand = "^0.8"

[dev-dependencies]
wav = "^1.0"
